mike skeleton final edits

--- a/Team 4 - Motion Planning - Skeleton.ipynb
+++ b/Team 4 - Motion Planning - Skeleton.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -25,7 +25,8 @@
     "import numpy as np\n",
     "from shapely.geometry import Point, Polygon, LineString, box\n",
     "from environment import Environment, plot_environment, plot_line, plot_poly\n",
-    "import pyclipper"
+    "import pyclipper\n",
+    "from pyscipopt import Model"
    ]
   },
   {
@@ -56,115 +57,152 @@
     "\n",
     "In this part, we will incorporate robot dynamics using a discrete time model. The initial location, goal locations, the geometry of system and obstacles, and vehicle speed limits are the inputs. We ignore acceleration constraints, and will solve an optimization problem to minimize distance. We will simplify the problem by treating the robot as a point mass as well. \n",
     "\n",
-    "Under these assumptions, the only dynamic equation can be written as:\n",
+    "Under these assumptions, a generalized dynamic equation can be written in the form:\n",
     "\n",
     "$$\\begin{array}{c}\n",
-    "& s_{i+1} = A_ds_i + B_du_i \\\\\\\n",
+    "& s_{t+1} = A_ds_t + B_du_t \\\\\\\n",
     "\\end{array}$$\n",
     "\n",
     "where:\n",
-    "- $s_i$ is state (postion and velocity) of the robot at time step $i$\n",
+    "- $s_t$ is state (postion and velocity) of the robot at time step $t$\n",
     "- $A_d$ describes the dynamics relationship between position and velocity\n",
-    "- $B_d$ describes the dynamics relationship of \n",
-    "- $u_i$ is the control input at time step $i$\n",
+    "- $B_d$ describes the dynamics relationship between control input and velocity\n",
+    "- $u_t$ is the control input at time step $t$\n",
     "- $\\Delta t$ is the time step size within total time $T$\n",
+    "\n",
+    "In our simplified robot dynamics system, we will ignore control inputs and model dynamics as a function of position and time only. The maximum velocity will be formulated as a constraint on position variables at consecutive time steps. We can therefore system dynamics to be of the form:\n",
+    "\n",
+    "$$\\begin{array}{c}\n",
+    "& s_{t+1} = A_ds_t \\\\\\\n",
+    "\\end{array}$$\n",
     "\n",
     "We can translate this equation into the matrix form:\n",
     "\n",
-    "$$  \\begin{pmatrix}x_{i+1}\\\\y_{i+1}\\\\\\dot{x}_{i+1}\\\\\\dot{y}_{i+1}\\end{pmatrix} = \\begin{pmatrix}1&0& \\bigtriangleup t &0\\\\0&1&0&\\bigtriangleup t\\\\0&0&1&0\\\\0&0&0&1\\end{pmatrix}  \\begin{pmatrix}x_{i}\\\\y_{i}\\\\\\dot{x}_{i}\\\\\\dot{y}_{i}\\end{pmatrix}$$\n"
+    "$$  \\begin{pmatrix}x_{t+1}\\\\y_{t+1}\\end{pmatrix} = \\begin{pmatrix}1&0& \\bigtriangleup t &0\\\\0&1&0&\\bigtriangleup t\\end{pmatrix}  \\begin{pmatrix}x_{t}\\\\y_{t}\\\\\\dot{x}_{t}\\\\\\dot{y}_{t}\\end{pmatrix}$$\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adding a maximum velocity constraint\n",
-    "Furthermore, we can add constraints for the maximum velocity:\n",
+    "## Modeling the problem using a mathematical programming formulation\n",
+    "\n",
+    "### Choosing Decision Variables\n",
     "$$\n",
     "\\begin{array}{c}\n",
-    "\\lVert v \\rVert \\le u \\\\\n",
-    "\\text{where } v = \\begin{vmatrix} \\dot{x} \\\\ \\dot{y} \\end{vmatrix}\\\\\n",
-    "\\text{and } u \\text{ is the maximum velocity permitted} \\\\\\\n",
+    "x_t \\text{ is the x-position at time step} i \\text{ for } i \\in [0,1,...,T]\\\\ \n",
+    "y_t \\text{ is the y-position at time step} i \\text{ for } i \\in [0,1,...,T]\\\\ \n",
     "\\end{array}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "\n",
+    "### Designing an Objective Function\n",
+    "Since the goal is to minimize distance traveled, our objective function will seek to minimize the cumulative distance traveled during each consecutive time step. The distance between any two time steps $t-1$ and $t$ is given by:\n",
+    "\n",
+    "$$\n",
+    "\\begin{array}{c}\n",
+    "\\sqrt{(x_t - x_{t-1})^2 + (y_t - y_{t-1})^2}\\\\  \n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "In order to remove the complicating square-root from our objective function, we can instead minimize the square of distance, which gives us the following objective function:\n",
+    "\n",
+    "$$\n",
+    "\\begin{array}{c}\n",
+    "\\text{OBJ: min}_t  \\sum_1^T{(x_t - x_{t-1})^2 + (y_t - y_{t-1})^2}\\\\  \n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Objective Function\n",
-    "We desire to minimize total distance traveled, so we model the objective function as follows:\n",
+    "### Modeling Maximum Velocity Constraint\n",
+    "Since our system is discretized into constant-duration time steps $\\Delta t$, we can model coordinate component velocity as the change position at any time step t:\n",
     "\n",
-    "$$\\begin{array}{c}\n",
-    "\\text{minimize} & \\sum() \\\\\\\n",
-    "\\end{array}$$"
+    "$$\n",
+    "\\begin{array}{c}\n",
+    "\\dot{x} = (x_t - x_{t-1})/\\Delta t\\\\\n",
+    "\\dot{y} = (y_t - y_{t-1})/\\Delta t\\\\\n",
+    "\\\\\n",
+    "\\text{and then the square of velocity becomes:}\\\\\n",
+    "\\\\\n",
+    "v^2 = [(x_t - x_{t-1})^2 + (y_t - y_{t-1})^2] / \\Delta t^2\\\\\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{array}{c}\n",
+    "\\text{If } u \\text{ is the maximum velocity permitted, then } \\lVert v \\rVert \\le u\\text{, so our constraint can be written as: } \\\\\n",
+    "\\\\\n",
+    "(x_t - x_{t-1})^2 + (y_t - y_{t-1})^2 \\le v^2 \\Delta t^2 \\quad \\forall t\\\\\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "Note that this constraint makes complicates the problem from a numerical solving efficiency standpoint -- the quadratic constraint brings us into the realm of Mixed-Integer Quadratically-Constrainted Programming (MIQCP)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Encoding obstacles as constraints\n",
+    "### Encoding obstacles as constraints\n",
     "\n",
-    "Since all the obstacles in this problem are stationary, we can easily encode arbitrarily shaped obstacles using constraints. And exactly 1 of them must be applied. And the concave shape can be dealt with by chopping them into multiple convex objects, or by setting a convex boundary that encompasses the entire shape.\n",
+    "Since all the obstacles in this problem are stationary, we can easily encode convex polygonal obstacles using linear constraints. Concave shape can be dealt with by chopping them into multiple convex objects, or by setting a convex boundary that encompasses the entire shape.\n",
     "\n",
     "<img src=\"simple_sq_obs.png\" style=\"width:50%;\"/>\n",
     "\n",
     "In the example scenario above, the obstacle is a rectangle shaped by $[x_{min}, x_{max}]$ and $[y_{min}, y_{max}]$. The positional constraint ensuring the obstacle is avoided can be expressed by: \n",
     "\n",
     "$$\\begin{array}{l}\n",
-    "& \\forall i  \\in [1,2,3,...,]:\\\\\n",
-    "& x_i \\leq x_{min}\\\\\n",
-    "\\text{or} & x_i \\geq x_{max}\\\\\n",
-    "\\text{or} & y_i \\leq y_{min}\\\\\n",
-    "\\text{or} & y_i \\geq y_{max}\\\\\n",
+    "& \\forall t  \\in [1,2,3,..., T]:\\\\\n",
+    "& x_t \\leq x_{min}\\\\\n",
+    "\\text{or} & x_t \\geq x_{max}\\\\\n",
+    "\\text{or} & y_t \\leq y_{min}\\\\\n",
+    "\\text{or} & y_t \\geq y_{max}\\\\\n",
     "\\end{array}$$\n",
     "\n",
-    "However, to make these constraints useful in solving a linear program, we need to reformulate the constraints to get rid of the \"OR\" statements and convert them to \"AND\" statements. To do this, we introduce the notion of the binary variable $t_{j,k}$:  \n",
+    "However, to make these constraints useful in solving a linear program, we need to reformulate the constraints to get rid of the \"OR\" statements and convert them to \"AND\" statements. To do this, we introduce the notion of the binary variable $z_{j,k}$:  \n",
     "\n",
     "$$\\begin{array}{l}\n",
-    "&& t_{j,k} \\in [0,1]\\\\\n",
+    "&& z_{j,k} \\in [0,1]\\\\\n",
     "&\\text{where} & j \\in [1,2,3,...J]\\\\\n",
     " && k \\in [1,2,3,...K_j]\\\\\n",
     " && J \\text{ is the number of polygon obstacles}\\\\\n",
     " && k \\text{ is the index of each side of polygon obstacle j with $K_j$ total sides}\\\\\n",
     "\\end{array}$$\n",
     "\n",
-    "The binary variable $t_{j,k}$ is known as a _slack_ variable. A _slack_ variable allows us to transform and inequality into an equality, or in this case, an \"OR\" statement into an \"AND\" statement. For example, take the following inequality:\n",
+    "The binary variable $z_{j,k}$ is known as a _slack_ variable. A _slack_ variable allows us to transform and inequality into an equality, or in this case, an \"OR\" statement into an \"AND\" statement. For example, take the following inequality:\n",
     "\n",
     "\\begin{equation}\n",
     "\\bf{A}x \\leq b\n",
     "\\end{equation}\n",
     "\n",
-    "We introduce the slack variable $y \\geq 0$ which allows us to transform the above inequality into the following equality:\n",
+    "We introduce the slack variable $z \\geq 0$ which allows us to transform the above inequality into the following equality:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\bf{A}x + y = b\n",
+    "\\bf{A}x + z = b\n",
     "\\end{equation}\n",
     "\n",
-    "Because $y$ can compensate for the \"slack\" between b and $\\bf{A}x$ and make it so that $\\bf{A}x + y$ is always equal to $b$.\n",
+    "Because $z$ can compensate for the \"slack\" between b and $\\bf{A}x$ and make it so that $\\bf{A}x + z$ is always equal to $b$.\n",
     "\n",
-    "Therefore, for our simple rectangle example, to transform the \"OR\" statements into \"AND\" statements, we use $t_{i,k}$ together with an arbitrarily large positive number $M$ (referred to as \"Big-M\" notation\").\n",
+    "Therefore, for our simple rectangle example, to transform the \"OR\" statements into \"AND\" statements, we use $z_{i,k}$ together with an arbitrarily large positive number $M$ (referred to as \"Big-M\" notation\").\n",
     "\n",
     "$$\\begin{array}{l}\n",
-    "& \\forall i \\in [1,2,...,N]: \\\\\n",
-    "& x_i \\leq x_{min} + M t_{11} \\\\\n",
-    "\\text{and} & -x_i \\leq -x_{max} + M t_{12} \\\\\n",
-    "\\text{and} & y_i \\leq y_{min} + M t_{13} \\\\\n",
-    "\\text{and} & -y_i \\leq -y_{max} + M t_{14} \\\\\n",
-    "\\text{and} & \\Sigma_{k=1}^{4} t_{j,k} \\leq 3 \\\\\n",
+    "& \\forall t \\in [1,2,..., T]: \\\\\n",
+    "& x_t \\leq x_{min} + M z_{1,1} \\\\\n",
+    "\\text{and} & -x_t \\leq -x_{max} + M z_{1,2} \\\\\n",
+    "\\text{and} & y_t \\leq y_{min} + M z_{1,3} \\\\\n",
+    "\\text{and} & -y_t \\leq -y_{max} + M z_{1,4} \\\\\n",
+    "\\text{and} & \\Sigma_{k=1}^{4} z_{j,k} \\leq 3 \\\\\n",
     "\\end{array}$$\n",
     "\n",
     "\n",
-    "For example, $t_{j1}=0$ if $x_i \\leq x_{min}$. If $x_i \\gt x_{min}$, then $t_{j1}=1$ and since $M$ is a large positive number, we satisfy the constraint that $x_i \\leq x_{min} + M t_{j1}$. In order to classify a position $(x_i,y_i)$ as within obstacle $j$, then $\\Sigma_{k=1}^{4} t_{j,k} = 4$ which has the same meaning as all of the \"OR\" statements in the previous section being false.\n"
+    "For example, $z_{j,1}=0$ if $x_t \\leq x_{min}$. If $x_t \\gt x_{min}$, then $z_{j,1}=1$ and since $M$ is a large positive number, we satisfy the constraint that $x_t \\leq x_{min} + M z_{j,1}$. In order to classify a position $(x_t,y_t)$ as within obstacle $j$, then $\\Sigma_{k=1}^{4} z_{j,k} = 4$ which has the same meaning as all of the \"OR\" statements in the previous section being false.\n"
    ]
   },
   {
@@ -173,7 +211,7 @@
    "source": [
     "## Generalizing constraints for a n-sided polygon\n",
     "The extension of the constraint enumeration to an obstacle shaped as a n-sided polygon is fairly trivial; the number of per-obstacle constraint equations is always $n+1$ with the last constraint equation resembling:\n",
-    "$$\\Sigma_{k=1}^{n} t_{j,k} \\leq n-1$$\n",
+    "$$\\Sigma_{k=1}^{n} z_{j,k} \\leq n-1$$\n",
     "\n",
     "The challenge in extending the obstacle encoding problem to obstacles shaped as n-sided polygons is the fact that an edge of the obstacle could _not_ be orthogonal to either the environment's X or Y axes. \n",
     "\n",
@@ -187,17 +225,17 @@
     "\n",
     "and calculate $b_{j,k}$ by substituting a point along the side for the values $(x_{j,k},y_{j,k})$ and solving for $b_{j,k}$. If $x_{j,k'}-x_{j,k} = 0$ or $y_{j,k'}-y_{j,k} = 0$, the side is parallel to the y-axis and x-axis, respectively. In these cases, the constraint equation for the side follows from the previous section. All sides that are not orthogonal to an axis can be represented by the following constraint equation:\n",
     "\n",
-    "$$y_{i} \\leq A_{j,k}x_i + b_{j,k} + M t_{j,k}$$\n",
+    "$$y_{t} \\leq A_{j,k}x_t + b_{j,k} + M z_{j,k}$$\n",
     "\n",
-    "Where $t_{i,k}$ and $M$ carry forward from the previous section. Therefore, the full set of constraint equations for sides of a rectangle whose sides are not orthogonal to either the x-axis or y-axis can be described by the following:\n",
+    "Where $z_{j,k}$ and $M$ carry forward from the previous section. Therefore, the full set of constraint equations for sides of a rectangle whose sides are not orthogonal to either the x-axis or y-axis can be described by the following:\n",
     "\n",
     "$$\\begin{array}{l}\n",
     "&\\forall i \\in [1,2,...,N]:\\\\\n",
-    " & y_i \\leq A_{j,1}x_{i} + b_{j,1} + M t_{j1}\\\\\n",
-    "\\text{and} & -y_i \\geq -(A_{j,2}x_{i} + b_{j,2}) + M t_{j2}\\\\\n",
-    "\\text{and} & y_i \\leq A_{j,3}x_{i} + b_{j,3} + M t_{j3}\\\\\n",
-    "\\text{and} & -y_i \\geq -(A_{j,4}x_{i} + b_{j,4}) + M t_{j4}\\\\\n",
-    "\\text{and} & \\Sigma_{k=1}^{4} t_{j,k} \\leq 3\\\\\n",
+    " & y_t \\leq A_{j,1}x_{t} + b_{j,1} + M z_{j,1}\\\\\n",
+    "\\text{and} & -y_t \\geq -(A_{j,2}x_{t} + b_{j,2}) + M z_{j,2}\\\\\n",
+    "\\text{and} & y_t \\leq A_{j,3}x_{t} + b_{j,3} + M z_{j,3}\\\\\n",
+    "\\text{and} & -y_t \\geq -(A_{j,4}x_{t} + b_{j,4}) + M z_{j,4}\\\\\n",
+    "\\text{and} & \\Sigma_{k=1}^{4} z_{j,k} \\leq 3\\\\\n",
     "\\end{array}$$"
    ]
   },
@@ -406,24 +444,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Code here to automatically generate constraints from a list of lists that each define convex polygon vertices\n",
+    "# TODO\n",
+    "###"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Constraint Encoding Using NumberJack Language\n",
+    "## Constraint Encoding Using PySCIPOpt Interface and SCIP Solver\n",
     "\n",
-    "After constructing the planning problem as a quadratic constraint problem, the constraints along with the objective function will be feeded into the solver to get the optimized solutions. The Numberjack is a common API to interface with back-end solvers. \n",
+    "After constructing the path planning problem as a MIQCP problem, we must encode the variables, objective function, and constraints and feed this into a solver. [PySCIPOpt](https://github.com/SCIP-Interfaces/PySCIPOpt) is a commonly-used python interface for the open-source [SCIP Solver](https://scip.zib.de/). \n",
     "\n",
     "The underlying outline is: \n",
     " - Specify variables\n",
     " - Specify contraints over these variables\n",
     " - Construct a model with the constraints\n",
     " - Construct the solver using that model\n",
-    " - Call solve() and extract results from variables using get_value()\n",
+    " - Call `solve()` and extract results from variables using `get_value()`\n",
     " \n",
-    "As the variables and constraints are already established in the previous sections, this part will focus on the solver chosen and some basic example of the solver. "
+    "As the variables and constraints are already defined above, the following section provides and example encoding of our trivial problem with a single obstacle."
    ]
   },
   {
@@ -465,7 +507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Solver Selection**\n",
+    "### **Solver Selection**\n",
     "\n",
     "Since the problem contains quadratic constraints, we should select specific solver to solve the problem. Two possbile solvers are SCIP and Gurobi. \n",
     "\n",
@@ -478,10 +520,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 2.5\n",
+      "y: -0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# testing using SCIP via PyScipOpt\n",
+    "model = Model(\"Example\")  # model name is optional\n",
+    "\n",
+    "x = model.addVar(\"x\")\n",
+    "y = model.addVar(\"y\", vtype=\"INTEGER\")\n",
+    "model.setObjective(2.2*x + 3*y)\n",
+    "model.addCons(2*x - y*y >= 5)\n",
+    "model.optimize()\n",
+    "sol = model.getBestSol()\n",
+    "print(\"x: {}\".format(sol[x]))\n",
+    "print(\"y: {}\".format(sol[y]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -506,7 +569,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Code here to determine constraint parameters"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -521,22 +586,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Encoding of problem using PySCIPOpt"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Outstanding Questions\n",
-    "- What is the data structure we will be using for obstacles, paths, etc? Similar to HW6?\n",
-    "- Are workstations that are not the current goal to be treated as obstacles?\n",
-    "- Objective function = minimize time?\n",
-    "- Multiple droids? These must avoid eachother while moving, right? How many?\n",
-    "- Are we ignoring acceleration, and only considering velocity? So robots are stopped or traveling at max speed at all times?\n",
-    "- Which solver are we using?\n"
+    "## Conclusion\n",
+    "- Discussion of results\n",
+    "- Considerations for added complexity (multi-vehicle, fixed arrival time, etc)"
    ]
   },
   {
