cleanup skeleton edits

--- a/Team 4 - Motion Planning - Skeleton.ipynb
+++ b/Team 4 - Motion Planning - Skeleton.ipynb
@@ -90,8 +90,8 @@
     "### Choosing Decision Variables\n",
     "$$\n",
     "\\begin{array}{c}\n",
-    "x_t \\text{ is the x-position at time step} i \\text{ for } i \\in [0,1,...,T]\\\\ \n",
-    "y_t \\text{ is the y-position at time step} i \\text{ for } i \\in [0,1,...,T]\\\\ \n",
+    "x_t \\text{ is the x-position at time step } i \\text{ for } i \\in [0,1,...,T]\\\\ \n",
+    "y_t \\text{ is the y-position at time step } i \\text{ for } i \\in [0,1,...,T]\\\\ \n",
     "\\end{array}\n",
     "$$\n",
     "\n",
@@ -472,55 +472,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The constructs of the problem are splitted into 3 parts: variables, constraints, and model."
+    "The constructs of the problem are split into 3 parts: variables, constraints, and model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Some codes to solve the problem\n",
-    "\n",
-    "## To define a model\n",
-    "# model = Model()\n",
-    "\n",
-    "## Add constraints\n",
-    "#model.add(constraints)\n",
-    "\n",
-    "## load solver\n",
-    "# solver = model.load('solver_name')\n",
-    "\n",
-    "## Attempt to solve the problem\n",
-    "# solver.solve()\n",
-    "\n",
-    "## To generate solutions:\n",
-    "# solver.startNewSearch()\n",
-    "# while solver.getNewSolution():\n",
-    "#     #do something \n",
-    "\n",
-    "#Results will be stored in teh Variable objects."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Solver Selection**\n",
-    "\n",
-    "Since the problem contains quadratic constraints, we should select specific solver to solve the problem. Two possbile solvers are SCIP and Gurobi. \n",
-    "\n",
-    "Gurobi Optimizer is the the fastest and most powerful mathematical programming solver available for LP, QP and MIP (MILP, MIQP, and MIQCP) problems. But the problem is that Gurobi is not open-source.\n",
-    "\n",
-    "SCIP is currently one of the fastest non-commercial solvers for mixed integer programming (MIP) and mixed integer nonlinear programming (MINLP). It is also a framework for constraint integer programming and branch-cut-and-price. It allows for total control of the solution process and the access of detailed information down to the guts of the solver.\n",
-    "\n",
-    "Both the two solvers are fast and easy to implement with Numberjack. And the codes are pretty the same. We will choose one later, which serves better for the task in the project or relates to better results.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -544,6 +501,21 @@
     "sol = model.getBestSol()\n",
     "print(\"x: {}\".format(sol[x]))\n",
     "print(\"y: {}\".format(sol[y]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Solver Selection**\n",
+    "\n",
+    "Since the problem contains quadratic constraints, we should select specific solver to solve the problem. Two possbile solvers are SCIP and Gurobi. \n",
+    "\n",
+    "Gurobi Optimizer is the the fastest and most powerful mathematical programming solver available for LP, QP and MIP (MILP, MIQP, and MIQCP) problems, although Gurobi is not open-source.\n",
+    "\n",
+    "SCIP is currently one of the fastest non-commercial solvers for mixed integer programming (MIP) and mixed integer nonlinear programming (MINLP). It is also a framework for constraint integer programming and branch-cut-and-price. It allows for total control of the solution process and the access of detailed information down to the guts of the solver.\n",
+    "\n",
+    "Both the two solvers are fast and easy to implement with PySCIPOpt, and syntax is nearly identical. "
    ]
   },
   {
